--- a/code/assets/css/general.css
+++ b/code/assets/css/general.css
@@ -1,8 +1,20 @@
+body {
+  font-family: var(--primaryFont);
+  font-weight: 300;
+}
+
 .main-wrapper {
   max-width: 1200px;
   margin: 0 auto;
 }
+
 a {
   color: black;
   text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
