--- a/code/assets/css/header.css
+++ b/code/assets/css/header.css
@@ -6,7 +6,7 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  padding: calc(var(--spacing) * 4);
+  padding: calc(var(--spacing) * 4) 0;
 }
 
 .hamburger-menu {
