--- a/code/assets/css/variables.css
+++ b/code/assets/css/variables.css
@@ -8,6 +8,9 @@
   --secondaryColorLight: hsl(var(--secondaryColor), 97%, 57%);
   --secondaryColorNormal: hsl(var(--secondaryColor), 97%, 50%);
   --secondaryColorDarker: hsl(var(--secondaryColor), 92%, 48%);
+  --mainBackgroundColor: hsl(0, 0%, 98%);
+  --white: #fff;
+  --black: #000;
 
   /* SIZE */
   --xSmall: 0.5em;
