--- a/code/style.css
+++ b/code/style.css
@@ -4,98 +4,59 @@
   background-color: #eeeeee;
   }
 
-  .wolf {
+  .header {
 
   display: block;
   float: left;
-  width: 80px;
-  height: 80px;
+  width: 1000px;
+  height: 200px;
+  border: 2px solid;
 
   }
 
-/* RESPONSE LAYOUT*/
+.wolf {
 
-  @media (min-width: 668px) {
+  width: 30%;
+  display: flex;
+}
 
-  .wolf {
-
-  display: block;
-  float: left;
-  width: 50px;
-  height: 50px;
-   
-    }
-
-  }
-
-
-  h1 {
+ h1 {
   color: #d9212d;
   font-family: 'Montserrat', sans-serif;
   text-align-last:center;
-  margin-bottom: 2px;
   font-size: 70px;
-  position: relative;
-   
-  }
-
-  /* RESPONSE LAYOUT*/
-
-  @media (min-width: 668px) {
-
-  h1 {
-
-  color: #d9212d;
-  font-family: 'Montserrat', sans-serif;
-  text-align-last:left;
-  margin-bottom: 2px;
-  font-size: 50px;
-  position: relative;
-  
-    }
-
-  }
- 
-
-  .subscribe {
-
-  font-size: x-small;
-  float: left;
-
-  }
-
-
- /* RESPONSE LAYOUT hhhhhere*/
-
-  @media (min-width: 668px) {
-
-  .subscribe {
-
-  font-size: x-small;
-  float: right;
-
-    }
-
-  }
-
-   li {
-
-  display: block;
-  float: right;
   
   }
 
-li a {
-  display: block;
-  padding: 8px 12px;
-  background-color: #f7f7f7;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: black;
-  font-size: x-small;
-}
 
-li a:hover {
-  background-color:white;
+
+
+  .navbar {
+
+  float: right;
+  border: 2px solid;
+  height: 200px;
+  width: 200px;
+  background-color: #f1f1f1;
+  list-style-type: none;
+  padding: 10px;
+  }
+  
+  li a {
+    display: block;
+    width: 200px;
+    background-color: #d9212d;
+    color: #000;
+    padding: 2px;
+    text-decoration: none;
+  }  
+
+
+
+  /* Change the link color on hover */
+  li a:hover {
+  background-color: #b4b4b4;
+  color: whitesmoke;
 }
 
 .flex-parent {
@@ -108,6 +69,7 @@ li a:hover {
   border: 2px solid;
   
 }
+
 
 .flex-child-two {
 margin: 10px;
