add flex box div for header 3

--- a/code/style.css
+++ b/code/style.css
@@ -110,7 +110,7 @@ p {
    height: 260px;
    width: 1040px;
    border: 2px solid;
-   margin-top: 80px;
+   margin-top: 20px;
   
     
 }
@@ -264,3 +264,10 @@ margin-left: 9px;
 }
 
 
+.headerthree {
+ 
+  text-align: left;
+  font-size: x-small;
+  border: 2px solid;
+  height: 50px;
+}
