--- a/code/style.css
+++ b/code/style.css
@@ -5,9 +5,13 @@ body {
   padding: 0;
   background-color: rgba(2, 24, 44, 0.897);
   color: rgb(11, 102, 155);
+  position:relative;
+  padding-bottom: 4em;
+  
 }
 
 html, body {
+  position: relative;
   min-height: 100vh;
 }
 
@@ -235,8 +239,14 @@ nav input[type="text"]:focus {
   background-color: rgba(236, 184, 15, 0.781);
 }
 
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+
+}
+
 .footer-wrapper {
-  grid-area: footer;
   display: flex;
   width: 100%;
   height: 4em;
@@ -310,8 +320,6 @@ h3:hover, p:hover {
 
   .header-wrapper {
     height: 30em;
-    background-image: url("../pictures/ISS1280px.jpg");
-    background-position-y: -20vh;
   }
 
   .small-news {
@@ -343,7 +351,7 @@ h3:hover, p:hover {
 
   .searchbar {
     position: fixed;
-    right: 2.5em;
+    right: -22.5em;
     visibility: hidden;
     top: 2px;
     border: none;
@@ -351,6 +359,9 @@ h3:hover, p:hover {
 
   #searchbox:checked ~ .searchbar   {
     visibility: visible;
+    width: auto;
+    right: 2.5em;
+    transition: 0.5s;
   }
 
   nav input[type=text] {
@@ -396,6 +407,7 @@ h3:hover, p:hover {
     visibility: visible;
     background-color: rgba(0, 0, 0, 0.671);
     height: 40em;
+    transition: 0.5s;
   }
   
   header h1 {
@@ -404,6 +416,6 @@ h3:hover, p:hover {
 
   .header-wrapper {
     height: 25em;
-    background-image: url("../pictures/ISS640px.jpg");
+    background-image: url("../pictures/ISS1280px.jpg");
   }
 }
