--- a/code/style.css
+++ b/code/style.css
@@ -1,9 +1,9 @@
 body {
-  background:linear-gradient(#cbf7f7, #2d73d4, #020f3f, black);
+  background:linear-gradient(#cbf7f7, #2d73d4, #020f3f, #020f3f,black, black, black);
   color:white;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  min-height: 900px;
+  min-height: 3000px;
 }
 
 /*** HEADER ***/
@@ -13,12 +13,18 @@ header {
   height: 90px;
   display: flex;
   align-items: center;
-  padding: 10px 16px;
+  padding: 10px 30px 10px 10px;
   max-width: 1100px;
 }
 
 header h1 {
 color: black;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    animation: pulse 7s linear infinite;
 }
 
 .hamburger {
@@ -27,14 +33,16 @@ color: black;
   height: 30px;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-right: 5px;
+  
 }
 
 .hamburger div {
   width: 30px;
-  height: 5px;
+  height: 6px;
   background: #000000;
   border-radius: 5px;
+  margin-left: 20px;
+  margin-right: 5px;
 }
 
 header img {
@@ -51,20 +59,23 @@ nav a {
   margin-left: 16px;
 }
 
+nav a:hover{
+  color: #49547b;
+}
+
 /*** Big News Container***/
 
 .big-news-container {
-padding: 30px 16px;
 display: flex;
 flex-direction: column;
 width: 100%;
 max-width: 1100px;
-margin: 0 auto;
+margin: 10px 0 10px 10px;
+align-items: center;
 }
 
 .big-news-container img {
   width: 100%;
-  padding: 10px;
 }
 
 .big-news-container div {
@@ -73,23 +84,26 @@ margin: 0 auto;
 
 /***Four News Container***/
 
-.four-news-container div{
+.four-news-container {
   display: flex;
   width: 100%;
-  padding:10px;
   flex-direction: column;
   max-width: 1100px;
-  margin: 0 auto;
   justify-content: space-between;
+  align-items: center;
+  margin: 10px;
 }
 .four-news-container img{
   width: 100%;
-  padding: 26px;
+  cursor: pointer;
 }
 
+.four-news-container img:hover{
+  box-shadow: 5px 5px 3px 2px rgb(15, 71, 155);
+}
 /*** Media Queries ***/
 
-@media (min-width: 650px) 
+@media (min-width: 735px) 
 { 
   header {
     justify-content: space-between;
@@ -104,16 +118,25 @@ margin: 0 auto;
 
   .big-news-container{
     padding: 0;
+    flex-direction: row;
+  }
+
+  .big-news-container div{
+    width: 50%;
+  }
+
+  .big-news-container img{
+    width: 50%;
   }
   .four-news-container {
-    border: solid green;
     flex-direction: row;
     justify-content: space-between;
     max-width: 100%;
+    flex-wrap: wrap;
   }
 
   .four-news-container img {
-  width: 325px;
+  width: 23rem;
   }
 
 @media (min-width: 900px) {
@@ -128,14 +151,27 @@ margin: 0 auto;
 
   .four-news-container {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     max-width: 1100px;
     align-items: center;
-    margin: 0 auto;
+    margin: 10px;
   }
 
   .four-news-container img {
-  width: 200px;
+  width: 16rem;
+  }
+}
+
+/***LOGO ANIMATION EFFECT***/
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1.0);
   }
 }
