--- a/code/style.css
+++ b/code/style.css
@@ -98,6 +98,7 @@ img {
   width: 510px;
   height: 300px;
   border-radius: 25px;
+  box-shadow: 10px 5px 5px  #212529;
 }
 
 .pic {
@@ -398,7 +399,7 @@ a {
   }
 
   .text1 {
-    font-size: 22px;
+    font-size: 24px;
   }
 
 }
@@ -506,7 +507,9 @@ a {
   .inside-big img {
     width: 100%;
     height: 600px;
+    box-shadow: 5px 25px 5px  #212529;
   }
+
 
   .inside-big .pic {
     width: 1200px;
